fixed download button not showing up on slide images

--- a/css/animations.css
+++ b/css/animations.css
@@ -93,6 +93,10 @@
     transform: translateX(100%);
 }
 
+.slide .button{
+    opacity: 1;
+}
+
 
 /*
 ---------LOGO---------
